@@ -12,6 +12,8 @@ v0.9.4 -- xx yyy 2007
 - MUCRoom: fix potential crash in dtor
 - Buildsystem: disabled implicit build of tests and examples; use 'make test' and 'make examples'
 - SHA: fix potential crash in hex()
+- MUCRoom: fix detection of nick changes
+- UniqueMUCRoom: fix creation of unique room names
 
 
 v0.9.3 -- 18 Jul 2007
